# trustyai-service

./: .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CLAUDE.md  CODERABBIT_REMAINING_WARNINGS.md  CONTRIBUTING.md  Containerfile  Containerfile.backup  Dockerfile  PR122_review_findings.md  README.md  SECURITY.md  TEST_FIXES_SUMMARY.md  ai_fix.patch  jira_issues.csv  plan.md  pom.xml  pyproject.toml  test_gzip_upload_cluster.sh
.github/: dependabot.yml
.github/workflows/: build-and-push.yaml  ci-build.yaml  ci-publish.yaml  python-tests.yaml  scorecard.yaml  security-scan.yaml
docs/: fourier-mmd-research.md  implementation_streaming_ks.md  jax-evaluation.md  mmd-research.md  trivy-noise-reduction-comparison.md
scripts/: dismiss-stale-trivy-alerts.sh  generate_protos.sh  setup-openshift-build.sh  test-ci-locally.sh  test-github-actions.sh  test_upload_endpoint.sh
src/: __init__.py  _version.py  exceptions.py  main.py
src/core/: __init__.py
src/core/metrics/: __init__.py
src/core/metrics/drift/: compare_means.py  greenwald_khanna_quantile_sketch.py  jensen_shannon.py  kolmogorov_smirnov.py  kolmogorov_smirnov_streaming.py  mmd.py  utils.py
src/core/metrics/fairness/: fairness_metrics_utils.py
src/core/metrics/language/: utils.py
src/endpoints/: consumer.py  drift_metrics.py  explainers.py  metadata.py  metrics_info.py  routes.py
src/endpoints/consumer/: __init__.py  consumer_endpoint.py  gzip_utils.py
src/endpoints/data/: __init__.py  data_download.py  data_upload.py
src/endpoints/drift_metrics_collection/: approx_ks_test.py  ks_test.py  meanshift.py
src/endpoints/evaluation/: lm_evaluation_harness.py
src/endpoints/explainers/: global_explainer.py  local_explainer.py
src/endpoints/explainers_collection/: global_exp.py
src/endpoints/metrics/: __init__.py  batch_mean.py  metrics_directory.py  metrics_info.py  moving_average.py
src/endpoints/metrics/drift/: approx_ks_test.py  compare_means.py  fourier_mmd.py  jensen_shannon.py  kolmogorov_smirnov.py  kolmogorov_smirnov_streaming.py  ks_test.py  meanshift.py  mmd.py
src/endpoints/metrics/identity/: identity_endpoint.py
src/middleware/: gzip_middleware.py
src/proto/: __init__.py  grpc_predict_v2_pb2.py
src/service/: __init__.py  constants.py  health_checks.py
src/service/config/: __init__.py  feature_flags.py  registry.py
src/service/data/: exceptions.py  model_data.py  modelmesh_parser.py  shared_data_source.py
src/service/data/datasources/: data_source.py
src/service/data/metadata/: __init__.py  storage_metadata.py
src/service/data/storage/: __init__.py  exceptions.py  pvc.py  storage_interface.py
src/service/payloads/metrics/: __init__.py  base_metric_request.py  request_reconciler.py
src/service/payloads/service/: __init__.py  schema.py  schema_item.py
src/service/payloads/values/: __init__.py  data_type.py  reconcilable_feature.py  reconcilable_field.py  reconcilable_output.py  reconciler_matcher.py  typed_value.py
src/service/prometheus/: __init__.py  gauge_config.py  metric_value_carrier.py  prometheus_publisher.py  prometheus_scheduler.py  shared_prometheus_scheduler.py
src/service/serialization/: __init__.py  detection.py  encoders.py  models.py  rows.py
src/service/utils/: __init__.py  download.py  exceptions.py  list_utils.py  logging_utils.py  upload.py
src/trustyai_service/: main.py
src/trustyai_service/core/: __init__.py
src/trustyai_service/endpoints/: __init__.py  metadata.py  paths.py
src/trustyai_service/endpoints/consumer/: __init__.py  consumer_endpoint.py  gzip_utils.py
src/trustyai_service/endpoints/data/: data_upload.py
src/trustyai_service/endpoints/evaluation/: __init__.py  _env_security.py  lm_evaluation_harness.py
src/trustyai_service/endpoints/explainers/: __init__.py  global_explainer.py  local_explainer.py
src/trustyai_service/middleware/: __init__.py  gzip_middleware.py
src/trustyai_service/proto/: grpc_predict_v2.proto
src/trustyai_service/service/: __init__.py  constants.py  health_checks.py  tls.py
tests/: __init__.py  test_app_integration.py
tests/core/: __init__.py
tests/core/metrics/: __init__.py  test_fairness.py
tests/data/: __init__.py  bank_churn_train.csv  input-sample.b64  output-sample.b64
tests/endpoints/: test_download_endpoint.py  test_inference_ids.py  test_lm_eval_env_vars.py  test_metadata_info.py  test_name_mapping.py  test_paths_contract.py  test_routes_contract.py  test_tag_management.py  test_upload_endpoint.py  test_upload_endpoint_maria.py  test_upload_endpoint_pvc.py
tests/endpoints/consumer/: __init__.py  test_cloud_event_gzip.py  test_consumer_cloud_event.py  test_kserve_data_validation.py  test_kserve_datatype_mapping.py  test_process_payload.py  test_reconcile_kserve.py
tests/endpoints/metrics/: __init__.py  test_batch_mean.py  test_batch_mean_unit.py  test_moving_average.py
tests/metrics/: test_fairness.py
tests/metrics/drift/: factory.py
tests/metrics/language/: test_bleu.py  test_fuzzyMatch.py  test_levenshteinCommon.py  test_rogue.py  test_wordErrorRate.py
tests/middleware/: __init__.py  test_gzip_middleware_unit.py
tests/resources/: __init__.py  compose-local-maria.yaml  my.cnf
tests/service/: __init__.py  test_consumer_endpoint_reconciliation.py  test_health_checks.py  test_tls.py
tests/service/config/: __init__.py  test_feature_flags.py  test_registry.py
tests/service/data/: __init__.py  test_async_contract.py  test_mariadb_migration.py  test_mariadb_storage.py  test_modelmesh_parser.py  test_payload_reconciliation.py  test_payload_reconciliation_maria.py  test_payload_reconciliation_pvc.py  test_pvc_path_traversal.py  test_storage_factory.py  test_storage_init.py  test_utils.py
tests/service/payloads/: __init__.py
tests/service/prometheus/: __init__.py  test_metric_value_carrier.py  test_prometheus_publisher.py  test_prometheus_scheduler.py
tests/service/serialization/: __init__.py  test_detection.py  test_encoders.py  test_models.py  test_rows.py
tests/service/utils/: __init__.py  test_list_utils.py
(+148 files in other folders)
