[project]
name = "trustyai-service"
version = "1.0.0rc0"
description = "TrustyAI Service"
authors = [{ name = "Rui Vieira" }, { name = "TrustyAI team" }]
requires-python = ">=3.12, <3.15"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.7,<2",
    "scipy>=1.15,<2",
    "numpy>=2.0,<3",
    "pandas>=2.2.3,<4",
    "polars>=1.2,<2",
    "fastapi>=0.116,<0.129",
    "fastapi-utils>=0.8,<0.9",
    "uvicorn>=0.38,<1",
    "typing-inspect>=0.9,<1",
    "prometheus-client>=0.22,<0.25",
    "pydantic>=2.12,<3",
    "hypercorn>=0.17,<0.19",
    "protobuf>=7,<8",        # Security: Resolves CVE-2026-0994 (HIGH - Buffer overflow)
    "cryptography>=46,<47",  # Security: Resolves CVE-2026-26007 (HIGH)
    "h5py>=3.13,<4",
    "isodate>=0.7,<0.8",
]

[dependency-groups]
dev = ["httpx>=0.28"]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-asyncio>=1",
    "hypothesis>=6",
    "aif360>=0.6",
    "pillow>=12.1",          # Security: Resolves CVE-2026-25990 (HIGH - Out-of-bounds write)
]
notebook = [
    "ipykernel>=7",
    "ipywidgets>=8",
    "tornado>=6.5",          # Security: Resolves CVE-2026-31958 (HIGH - DoS via malformed headers) and 1 MEDIUM
]

[project.optional-dependencies]
eval = [
    "lm-eval[api]>=0.4,<0.5",
    "nltk>=3.9.4,<4",        # Security: Resolves CVE-2025-14009 (CRITICAL - Zip Slip), CVE-2026-33236, CVE-2026-33231 (HIGH), and 2 MEDIUM
    "sqlitedict>=2.1,<3",    # Security: Resolves CVE-2024-35515 (HIGH)
]
mariadb = [
    "mariadb>=1.1.12,<1.2",
    "javaobj-py3>=0.4.4,<0.5",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
