[project]
name = "trustyai-service"
version = "1.0.0rc0"
description = "TrustyAI Service"
authors = [{ name = "Rui Vieira" }, { name = "TrustyAI team" }]
requires-python = ">=3.12, <3.15"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.7,<2",
    "scipy>=1.15,<2",
    "numpy>=2.0,<3",
    "pandas>=2.2.3,<4",
    "polars>=1.2,<2",
    "fastapi>=0.116,<0.129",
    "fastapi-utils>=0.8,<0.9",
    "uvicorn>=0.38,<1",
    "typing-inspect>=0.9,<1",
    "prometheus-client>=0.22,<0.25",
    "pydantic>=2.12,<3",
    "hypercorn>=0.17,<0.19",
    "protobuf>=7,<8",        # Security: Resolves CVE-2026-0994 (HIGH - Buffer overflow) [forward-looking placeholder]
    "cryptography>=46,<47",  # Security: Resolves CVE-2026-26007 (HIGH) [forward-looking placeholder]
    "h5py>=3.13,<4",
    "isodate>=0.7,<0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "pyrefly>=0.61",
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
]
types = [
    "pandas-stubs>=2.3.3",
    "scipy-stubs>=1.15",
    "scikit-learn-stubs>=0.0.3",
    "h5py-stubs>=0.1.2",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist[psutil]>=3.8.0",
    "hypothesis>=6.151.12",
    "aif360>=0.6.1",
    "pillow>=12.2.0",        # Security: Resolves CVE-2026-25990 (HIGH - Out-of-bounds write)
]
notebook = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tornado>=6.5.5",        # Security: Resolves CVE-2026-31958 (HIGH - DoS via malformed headers) and 1 MEDIUM
]

[project.optional-dependencies]
eval = [
    "lm-eval[api]>=0.4,<0.5",
    "nltk>=3.9.4,<4",        # Security: Resolves CVE-2025-14009 (CRITICAL - Zip Slip), CVE-2026-33236, CVE-2026-33231 (HIGH), and 2 MEDIUM
    "sqlitedict>=2.1,<3",    # Security: Resolves CVE-2024-35515 (HIGH)
]
# Note: grpcio/grpcio-tools removed - incompatible with protobuf v7, unused (protoc used instead)
mariadb = ["mariadb>=1.1.12,<1.2", "javaobj-py3>=0.4.4,<0.5"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude generated protobuf files from all ruff operations
exclude = ["src/proto/grpc_predict_v2_pb2.py"]

# Note: select = ["ALL"] with per-file-ignores will be enabled in a
# subsequent PR after source code is updated to comply with all rules.

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--dist=loadgroup"

[tool.bandit]
exclude_dirs = ["tests/"]
skips = [
    "B104",  # hardcoded_bind_all_interfaces - intentional for service binding (src/main.py)
    "B108",  # hardcoded_tmp_directory - system temp dir usage (src/service/data/storage/__init__.py)
    "B608",  # hardcoded_sql_expressions - false positives from table name construction in MariaDB storage (uses parameterized queries for actual data)
]

[tool.pyrefly]
project-excludes = ["**/proto/**", "src/proto/**", "src/proto/grpc_predict_v2_pb2.py"]
disable-project-excludes-heuristics = true
# Forward-looking: pyrefly uses this for type checking, not runtime
python-version = "3.14.0"
ignore-missing-imports = [
    "aif360.*",
    "fastapi.*",
    "fastapi_utils.*",
    "hypercorn.*",
    "isodate.*",
    "javaobj.*",
    "lm_eval.*",
    "mariadb.*",
    "prometheus_client.*",
    "starlette.*",
    "libcst.*",
    # Test dependencies
    "pytest.*",
    "hypothesis.*",
    "matplotlib.*",
]

# Broad suppressions for pre-existing type issues.
# Will be tightened as code PRs fix root causes.
[[tool.pyrefly.sub-config]]
matches = "src/**/*.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"
bad-assignment = "ignore"
bad-function-definition = "ignore"
bad-return = "ignore"
bad-index = "ignore"
bad-override = "ignore"
bad-param-name-override = "ignore"
bad-specialization = "ignore"
invalid-annotation = "ignore"
missing-attribute = "ignore"
missing-argument = "ignore"
missing-module-attribute = "ignore"
no-matching-overload = "ignore"
not-a-type = "ignore"
not-iterable = "ignore"
unbound-name = "ignore"
unexpected-keyword = "ignore"
unsupported-operation = "ignore"

[[tool.pyrefly.sub-config]]
matches = "tests/**/*.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"
bad-return = "ignore"
missing-attribute = "ignore"
no-access = "ignore"
not-a-type = "ignore"

# Suppress sklearn mixin false positives in fairness metrics
[[tool.pyrefly.sub-config]]
matches = "src/core/metrics/fairness/**"

[tool.pyrefly.sub-config.errors]
missing-attribute = "ignore"

# Suppress scipy API issues in notebooks
[[tool.pyrefly.sub-config]]
matches = "**/*.ipynb"

[tool.pyrefly.sub-config.errors]
unexpected-keyword = "ignore"
no-matching-overload = "ignore"

# Suppress protobuf type issues in test utils
[[tool.pyrefly.sub-config]]
matches = "tests/service/data/test_utils.py"

[tool.pyrefly.sub-config.errors]
not-a-type = "ignore"

# Suppress intentional private attribute access in test files
[[tool.pyrefly.sub-config]]
matches = "tests/service/payloads/metrics/test_request_reconciler.py"

[tool.pyrefly.sub-config.errors]
missing-attribute = "ignore"
no-access = "ignore"

[[tool.pyrefly.sub-config]]
matches = "src/service/payloads/metrics/request_reconciler.py"  # Schema_item validated before use (false positive)

[tool.pyrefly.sub-config.errors]
missing-attribute = "ignore"

# Suppress test mock provider type mismatches
[[tool.pyrefly.sub-config]]
matches = "tests/core/metrics/test_fairness.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"

# Suppress Pydantic Field() default overrides in metric requests
[[tool.pyrefly.sub-config]]
matches = "src/endpoints/metrics/**/*.py"

[tool.pyrefly.sub-config.errors]
bad-override = "ignore"
bad-argument-type = "ignore"
bad-return = "ignore"
missing-attribute = "ignore"

# Suppress storage interface implementation signature differences
[[tool.pyrefly.sub-config]]
matches = "src/service/data/storage/**/*.py"

[tool.pyrefly.sub-config.errors]
bad-override = "ignore"
bad-return = "ignore"
unsupported-operation = "ignore"
missing-attribute = "ignore"
bad-index = "ignore"
bad-argument-type = "ignore"
not-iterable = "ignore"

# Suppress h5py/numpy type issues in PVC storage
[[tool.pyrefly.sub-config]]
matches = "src/service/data/storage/pvc.py"

[tool.pyrefly.sub-config.errors]
unsupported-operation = "ignore"
missing-attribute = "ignore"
bad-index = "ignore"
not-iterable = "ignore"
invalid-annotation = "ignore"
bad-argument-type = "ignore"
bad-param-name-override = "ignore"

# Suppress evaluation harness dynamic model issues
[[tool.pyrefly.sub-config]]
matches = "src/endpoints/evaluation/lm_evaluation_harness.py"

[tool.pyrefly.sub-config.errors]
no-matching-overload = "ignore"
unbound-name = "ignore"
missing-attribute = "ignore"

# Suppress consumer endpoint union type validation issues
# Runtime validation narrows union types before calling functions
[[tool.pyrefly.sub-config]]
matches = "src/endpoints/consumer/consumer_endpoint.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"

# Suppress test process/subprocess attribute access
[[tool.pyrefly.sub-config]]
matches = "tests/**/*.py"

[tool.pyrefly.sub-config.errors]
missing-attribute = "ignore"

# Suppress subprocess and config dict issues in main
[[tool.pyrefly.sub-config]]
matches = "src/main.py"

[tool.pyrefly.sub-config.errors]
missing-attribute = "ignore"
unsupported-operation = "ignore"

# Suppress metadata endpoint config issues
[[tool.pyrefly.sub-config]]
matches = "src/endpoints/metadata.py"

[tool.pyrefly.sub-config.errors]
unsupported-operation = "ignore"

# Suppress model data tuple return type issues
[[tool.pyrefly.sub-config]]
matches = "src/service/data/model_data.py"

[tool.pyrefly.sub-config.errors]
bad-return = "ignore"

# Suppress legacy maria reader pandas Index issues
[[tool.pyrefly.sub-config]]
matches = "src/service/data/storage/maria/legacy_maria_reader.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"

# Suppress storage init int conversion issues
[[tool.pyrefly.sub-config]]
matches = "src/service/data/storage/__init__.py"

[tool.pyrefly.sub-config.errors]
bad-argument-type = "ignore"

# Suppress typed value optional return types
[[tool.pyrefly.sub-config]]
matches = "src/service/payloads/values/typed_value.py"

[tool.pyrefly.sub-config.errors]
bad-return = "ignore"
